<resources>
    <string name="app_name">Reptile-Android</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_main">主页</string>
    <string name="title_user">达人</string>
    <string name="title_video">视频</string>
    <string name="title_my">我的</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="login">登 录</string>
    <string name="wechat">微信授权</string>
    <string name="login_phone">手机验证登录</string>
    <string name="search">搜索</string>
    <string name="test">test</string>
    <string name="follower_incremental">粉丝增量</string>
    <string name="user_title">涨粉达人榜</string>
    <string name="more">更多</string>
    <string name="follower_text">粉丝数</string>
    <string name="video_title">热播视频榜</string>
    <string name="like_text">点赞数</string>
    <string name="comment_text">评论数</string>
    <string name="collect_text">收藏数</string>
    <string name="like_inc">点赞增量</string>
    <string name="user_repo">达人库</string>

    <string name="spinner_user_prompt">choose</string>
    <string name="choose">筛选</string>
    <string name="video_repo">视频库</string>
    <string name="like_num">点赞数</string>
    <string name="nomore_text">已显示全部内容</string>
    <string name="user_co_text">达人收藏</string>
    <string name="video_co_text">视频收藏</string>
    <string name="fun_text">常用功能</string>
    <string name="more_util">更多工具</string>
    <string name="text_lljl">浏览记录</string>
    <string name="setting_item1">头像</string>
    <string name="setting_item2">昵称</string>
    <string name="setting_item3">更改手机号</string>
    <string name="setting_item4">设置密码</string>
    <string name="setting_item5">微信绑定</string>
    <string name="setting_item6">联系客服</string>
    <string name="setting_item7">分享App</string>
    <string name="setting_item8">关于我们</string>
    <string name="setting_item9">检查版本</string>
    <string name="setting_out_login">退出登录</string>
    <string name="co">收藏</string>
    <string name="all_follower">总粉丝数</string>
    <string name="all_like">总点赞数</string>
    <string name="follower_text_">粉丝数：</string>
    <string name="phone_login">手机号登录</string>
    <string name="Verification">验证码</string>
    <string name="phone_num">手机号</string>
    <string name="verity">获取验证码</string>
    <string name="title_login">登录</string>
    <!--    <string-array name="spinner_user">-->
    <!--        <item>昨日粉丝增量排序</item>-->
    <!--        <item>昨日点赞增量排序</item>-->
    <!--        <item>粉丝总量排序</item>-->
    <!--        <item>点赞总量排序</item>-->
    <!--    </string-array>-->
</resources>