<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.my.SettingActivity">

    <include layout="@layout/layout_top_bar" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:padding="12dp"
        android:background="@drawable/border_underline">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/setting_item1"/>

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:padding="12dp"
        android:background="@drawable/border_underline">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/setting_item2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:id="@+id/tv_nickname"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:padding="12dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_underline">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/setting_item3"/>

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_right"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:padding="12dp"
        android:background="@drawable/border_underline">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/setting_item4"/>

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_right"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:padding="12dp"
        android:background="@drawable/border_underline">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/setting_item5"/>

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_right"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

<!--    <RelativeLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="56dp"-->
<!--        android:padding="12dp"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:background="@drawable/border_underline">-->
<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_centerVertical="true"-->
<!--            android:textSize="18sp"-->
<!--            android:textColor="@color/black"-->
<!--            android:text="@string/setting_item6"/>-->

<!--        <ImageView-->
<!--            android:layout_width="16dp"-->
<!--            android:layout_height="16dp"-->
<!--            android:src="@drawable/ic_right"-->
<!--            android:layout_alignParentRight="true"-->
<!--            android:layout_centerVertical="true"-->
<!--            android:layout_alignParentEnd="true" />-->
<!--    </RelativeLayout>-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:padding="12dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_underline">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/setting_item7"/>

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_right"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:padding="12dp"
        android:background="@drawable/border_underline">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/setting_item8"/>

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_right"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:padding="12dp"
        android:background="@drawable/border_underline">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/setting_item9"/>

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_right"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/setting_out_login"
        android:onClick="exitLogin"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_shadow"
        android:textColor="@color/black"
        android:gravity="center"/>

</LinearLayout>