<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="cn.edu.swu.reptile_android.utils.DataUtil"/>

        <variable
            name="user"
            type="cn.edu.swu.reptile_android.model.entity.User" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:padding="8dp"
        android:background="@drawable/border_shadow">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/iv_head"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_nickname"
            android:text="@{user.nickname}"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/iv_head" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_follower_text"
            android:text="@string/follower_text"
            android:layout_below="@id/tv_nickname"
            android:layout_toEndOf="@id/iv_head" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_follower_count"
            android:text="@{DataUtil.INSTANCE.strNumToString(user.followerCount)}"
            android:textColor="@color/black"
            android:layout_below="@id/tv_nickname"
            android:layout_toEndOf="@id/tv_follower_text"
            android:layout_marginStart="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_like_text"
            android:text="@string/like_num"
            android:layout_below="@id/tv_follower_text"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@id/iv_head"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_like_count"
            android:text="@{DataUtil.INSTANCE.strNumToString(user.likeCount)}"
            android:textColor="@color/black"
            android:layout_marginTop="4dp"
            android:layout_below="@id/tv_follower_count"
            android:layout_toEndOf="@id/tv_like_text"
            android:layout_marginStart="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_follower_incremental"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@{DataUtil.INSTANCE.numToString(user.followerIncremental)}"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/follower_incremental"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/tv_follower_incremental" />

    </RelativeLayout>
</layout>