<?xml version="1.0" encoding="utf-8"?>
<com.scwang.smart.refresh.layout.SmartRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/refreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.scwang.smart.refresh.header.ClassicsHeader
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fragment_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".ui.main.HomeFragment">

        <include layout="@layout/layout_search"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <com.youth.banner.Banner
                    android:id="@+id/banner"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_marginTop="24dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_fun"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginTop="24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="24dp"
                    android:gravity="center"
                    android:background="@drawable/border_shadow"
                    android:text="今日大盘" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/border_shadow">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_alignParentRight="true"
                        android:text="@string/user_title"
                        android:layout_alignParentEnd="true" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_user_more"
                        android:text="@string/more"
                        android:layout_marginTop="8dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_rank_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="48dp"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/border_shadow">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_alignParentRight="true"
                        android:text="@string/video_title"
                        android:layout_alignParentEnd="true" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_video_more"
                        android:text="@string/more"
                        android:layout_marginTop="8dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_rank_video"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="48dp"/>
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:text="@string/nomore_text"
                    android:textSize="12sp"
                    android:gravity="center"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</com.scwang.smart.refresh.layout.SmartRefreshLayout>