<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="cn.edu.swu.reptile_android.utils.DataUtil"/>

        <variable
            name="video"
            type="cn.edu.swu.reptile_android.model.entity.Video" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginBottom="12dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:background="@drawable/border_shadow">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:id="@+id/tv_video_name"
            android:text="@{video.videoName}"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="4dp"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_video_user_name"
            android:text="@{video.userName}"
            android:textSize="12sp"
            android:layout_below="@id/tv_video_name"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_video_like"
                android:textColor="@color/black"
                android:text="@{DataUtil.INSTANCE.strNumToString(video.likeNum)}"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_like_text"
                android:text="@string/like_text"
                android:textSize="12sp"
                android:layout_below="@id/tv_video_like" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_video_comment"
                android:text="@{DataUtil.INSTANCE.strNumToString(video.commentNum)}"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_comment_text"
                android:layout_below="@id/tv_video_comment"
                android:textSize="12sp"
                android:text="@string/comment_text"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_video_collect"
                android:text="@{DataUtil.INSTANCE.strNumToString(video.collectNum)}"
                android:textColor="@color/black"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_collect_text"
                android:layout_below="@id/tv_video_collect"
                android:text="@string/collect_text"
                android:textSize="12sp"
                android:layout_alignParentEnd="true" />


        </RelativeLayout>

    </RelativeLayout>
</layout>